# openai-batch-gen

./: .gitignore  pyproject.toml
example/: colors.jsonl  example.sh  response.jsonl
src/openai_batch_gen/: basic_gen.py  utils.py
src/openai_batch_gen/cli/: __init__.py  main.py  request.py  response.py  utils_catl.py  utils_extract.py
src/openai_batch_gen/schema/: request.py  response.py
