[project]
name = "openai-batch-gen"
version = "0.1.0"
description = ""
authors = [{ name = "Jakub Szulc", email = "58491724+j-szulc@users.noreply.github.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "mmh3>=5.2.0",
    "pydantic>=2.11.7",
]

[project.scripts]
openai-batch-gen = "openai_batch_gen.cli.main:main"

[tool.hatch.build.targets.sdist]
include = ["src/openai_batch_gen"]

[tool.hatch.build.targets.wheel]
include = ["src/openai_batch_gen"]

[tool.hatch.build.targets.wheel.sources]
"src/openai_batch_gen" = "openai_batch_gen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
